AE card collapsing, fixed CSS breakpoints, fixed first-search bug (#365)
* AE card collapsing, fixed CSS breakpoints, fixed first-search bug
* updated branch
* css breakpoints for list controls

--- a/src/app/indicator-sharing/indicator-sharing-list/indicator-sharing-list.component.scss
+++ b/src/app/indicator-sharing/indicator-sharing-list/indicator-sharing-list.component.scss
@@ -48,3 +48,31 @@
     margin-right: 6px;
   }
 }
+
+@media (min-width: 1500px) {
+  .filterOpenBreakpoint {
+    width: 80%;
+  }
+  .filterOpenBreakpoint {
+    margin-left: 10%;
+  }
+}
+
+@media (min-width: 1700px) {
+  .filterOpenBreakpoint {
+    width: 66.66666667%;
+  }
+  .filterOpenBreakpoint {
+    margin-left: 16.66666667%;
+  }
+}
+
+@media (max-width: 1200px) {
+  #listControlFlexWraper {
+    flex-direction: column;
+    align-items: flex-start;
+    #spacer1, #spacer2 {
+      display: none;
+    }
+  }
+}
